--- a/engagement1/index.html
+++ b/engagement1/index.html
@@ -57,7 +57,7 @@
 
 <body>
 <?php include("../header.php"); ?>
-	<div id="flashcontent">SimpleViewer requires Adobe Flash. <a href="http://www.macromedia.com/go/getflashplayer/">Get Adobe Flash.</a> If you have Flash installed, <a href="index.php?detectflash=false">click to view gallery</a>.</div>	
+	<div id="flashcontent">SimpleViewer requires Adobe Flash. <a href="http://www.macromedia.com/go/getflashplayer/">Get Adobe Flash.</a> If you have Flash installed, <a href="index.html?detectflash=false">click to view gallery</a>.</div>	
 
 	<script type="text/javascript">
 
